# nginz

./: .gitignore  AUTHORS  BENCHMARKING.md  LICENSE  Makefile.am  NEWS  README  README.md  TASKS.md  autogen.sh  configure.ac  libnginez.pc.in  quitall.sh
apps/: Makefile.am
apps/chat/: Makefile.am  README.md
apps/chat/inc/: chat.h  chat_subsystem.h
apps/chat/inc/chat/: broadcast.h  chat_command.h  chat_factory.h  hiddenjoin.h  join.h  leave.h  private_message.h  room.h  room_master.h  uptime.h  user.h  version.h  welcome.h
apps/chat/src/: broadcast.c  chat.c  chat_accept.c  chat_command.c  chat_factory.c  chat_plugin_manager.c  chat_zombie.c  hiddenjoin.c  join.c  leave.c  main.c  private_message.c  profiler.c  quit.c  room.c  room_master.c  uptime.c  user.c  version.c  welcome.c
apps/http/: Makefile.am  README.md  libnginz_http.pc.in  sequence_diagram_http_accept.sd  sequence_diagram_http_respond.sd
apps/http/inc/: http.h  http_subsystem.h
apps/http/inc/http/: http_accept.h  http_factory.h  http_plugin_manager.h
apps/http/src/: http.c  http_accept.c  http_factory.c  http_parser.c  http_plugin_manager.c  http_subsystem.c  http_tunnel.c  main.c
apps/load_balancer/: Makefile.am  README.md
apps/load_balancer/inc/: load_balancer.h  load_balancer_subsystem.h
apps/load_balancer/src/: load_balancer_subsystem.c
apps/web_chat/: Makefile.am
apps/web_chat/src/: main.c  page_chat.c  web_session_factory.c
base/: Makefile.am  parallel.md  plugin.md  subsystems.dot
base/inc/: backtrace.h  binary_coder.h  binary_coder_internal.h  core_subsystem.h  fiber.h  fiber_internal.h  fork.h  lazy_call.h  lazy_call_internal.h  nginz_config.h  plugin.h  plugin_manager.h  scanner.h  shake.h
base/inc/parallel/: async_request.h  async_request_internal.h  ping.h  pipeline.h
base/inc/shake/: quitall.h  shake_internal.h
base/src/: base_subsystem.c  binary_coder.c  binary_coder_extended.c  event_loop_poll.c  fiber.c  lazy_call.c  main.c  plugin.c  plugin_manager.c  scanner.c  shake.c
base/src/parallel/: async_request.c  fork.c  ping.c  pipeline.c
base/src/shake/: enumerate.c  help.c  quitall.c  test.c
base/tests/: Makefile.am  check_binary_coder.c  check_event_loop.c  check_pipeline.c  check_scanner.c  check_single_fiber.c
db/: Makefile.am
db/inc/: async_db.h  async_db_internal.h  async_db_master.h  db_subsystem.h
db/src/: async_db.c  async_db_master.c  db.c  db_subsystem.c
db/tests/: Makefile.am  check_db.c
inc/: binary_coder.h  db.h  event_loop.h  fiber.h  fork.h  log.h  nginez_config.h  nginz_config.h  plugin.h  plugin_manager.h  scanner.h  shake.h
inc/apps/web_chat/: web_chat.h
inc/net/: chat.h  http.h  protostack.h  streamio.h  tcp_listener.h
inc/net/chat/: broadcast.h  chat_accept.h  chat_plugin_manager.h  chat_proto.h  chat_zombie.h  profiler.h  quit.h  room.h  user.h  welcome.h
inc/net/http/: http_parser.h  http_plugin_manager.h  http_tunnel.h
inc/parallel/: async_db.h  async_db_master.h  async_request.h  pipeline.h
inc/shake/: quit.h  test.h
net/: Makefile.am
net/inc/: net_subsystem.h  protostack.h  raw_pipeline.h  raw_pipeline_internal.h  tcp_listener_internal.h
net/src/: chat.c  main.c  net_subsystem.c  protostack.c  raw_pipeline.c  socket_pipeline.c  streamio.c  tcp_listener.c
scripts/: dbdump.sh  socat.sh
scripts/test/: greet_web_chat.txt  help.txt  hi_web_chat.txt  home.txt  join_web_chat.txt  leave_web_chat.txt  profiler_web_chat.txt  rooms_web_chat.txt  test_tornado.py  web_chat.txt
src/: backtrace.c  binary_coder.c  binary_coder_extended.c  db.c  event_loop.c  event_loop_partitioned_openmp_poll.c  event_loop_poll.c  fiber.c  main.c  plugin.c  plugin.md  plugin_manager.c  scanner.c  shake.c
src/apps/web_chat/: page_chat.c  web_chat.c  web_chat_factory.c  web_session_factory.c
src/net/: chat.c  http.c  protostack.c  streamio.c  tcp_listener.c
src/net/chat/: broadcast.c  chat_accept.c  chat_command.c  chat_factory.c  chat_plugin_manager.c  chat_proto.c  chat_zombie.c  hiddenjoin.c  join.c  leave.c  private_message.c  profiler.c  quit.c  room.c  room_master.c  uptime.c  user.c  version.c  welcome.c
src/net/http/: http_accept.c  http_factory.c  http_parser.c  http_plugin_manager.c  http_tunnel.c
src/parallel/: README.md  async_db.c  async_db_master.c  async_request.c  fork.c  ping.c  pipeline.c
src/shake/: help.c  quit.c  quitall.c  test.c
test/: Makefile  hi_web_chat.txt  join_web_chat.txt  login_web_chat.txt  quit_web_chat.txt  test_tornado.py  version_web_chat.txt  web_chat.txt
